--- a/BTOCommunicator/BTOCommunicator/BTOCommunicator.csproj
+++ b/BTOCommunicator/BTOCommunicator/BTOCommunicator.csproj
@@ -93,6 +93,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewTenant.xaml.cs">
+      <DependentUpon>ViewTenant.xaml</DependentUpon>
+    </Compile>
     <Page Include="BTOCommunicator.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -108,6 +111,10 @@
     <Page Include="Style\Skin.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ViewTenant.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
